# fkl-streamer

./: .envrc_docker  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
app/: constants.py  main.py  utils.py
app/config/: config.yaml
app/models/: __init__.py  marketing_mix_modelling.py  media_channel_meta.py  media_channel_radio.py  media_channel_tv.py  sales.py
app/processor/: silver_proc.py
app/proto-schema/: media_radio.proto  media_tv.proto  sale.proto
app/service/: routers.py
deploy/: deployment.yaml  service.yaml
lakehouse/bronze/media_radio/: part-00001-2ff21e5a-de79-49a0-8018-667e7655e898-c000.snappy.parquet
models/: __init__.py  marketing_mix_modelling.py  media_channel_radio.py  media_channel_tv.py  sales.py
services/: media_service.py
tests/: media_radio_pb2.py  media_tv_pb2.py  sale_pb2.py  test_media_radio_proto.py  test_media_tv_proto.py  test_sale_proto.py
tests/samples/: media_channel_meta.json  media_channel_radio.json  media_channel_tv.json  sale.json
