[tool.poetry]
name = "fastapi-kafka-stream-proc"
version = "0.1.0"
description = ""
authors = ["Stefano Lori <wolliq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
pytest = "^8.3.4"
black = "^25.1.0"
pylint = "^3.3.4"
faststream = {extras = ["cli"], version = "^0.5.34"}
aiokafka = "^0.12.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
confluent-kafka = "^2.8.0"
deltalake = "^0.24.0"
polars = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
