[tool.poetry]
name = "fkl-streamer"
version = "0.3.0"
description = "FastAPI streamer from Kafka to Lakehouse on delta lake"
authors = ["Stefano Lori <wolliq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
pytest = "^8.3.4"
black = "^25.1.0"
pylint = "^3.3.4"
faststream = {extras = ["cli"], version = "^0.5.34"}
aiokafka = "^0.12.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
confluent-kafka = "^2.8.0"
deltalake = "^0.24.0"
polars = "^1.21.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
